--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -86,25 +86,56 @@ header
 .navbar-soluciones
   padding-top 10px !important
 
+.barra-soluciones
+  font-family FontOdecopack
+  .botones-soluciones
+    .boton
+      margin 0 !important
+      padding 0 !important
+      text-align center !important
+      .contenido
+        height 100%
+        background-color white
+        color gray
+        border 1px solid $odecopack-color_5
+      .contenido:hover
+        border none
+        background-image url("../img/fondo_botones_hover.jpg")
+        background-repeat no-repeat
+        background-size auto
+        color white !important
+    a
+      color inherit
+      text-decoration inherit
+
+.cabezote
+  background-position center !important
+  background-repeat no-repeat !important
+  background-size cover !important
+  min-height 500px
+  .card
+    background rgba(0, 0, 0, 0.4)
+    color white
+  .left
+    position absolute
+    left 0
+  .right
+    position absolute
+    right 0
+  .card-text
+    color white
+
 .intro
   min-height inherit !important
   .barra-soluciones
-    font-family FontOdecopack
     .botones-soluciones
       .boton
-        margin 0 !important
-        padding 0 !important
-        text-align center !important
         .contenido
-          height 100%
           color white
+          background-color inherit
+          border none
           img
             display inline !important
-        .contenido:hover
-          border none
-          background-image url("../img/fondo_botones_hover.jpg")
-          background-repeat no-repeat
-          background-size auto
       a
         color inherit
         text-decoration inherit
@@ -150,46 +181,6 @@ header
     border-top 3rem solid $odecopack-color_1
     border-right 3rem solid transparent
     width 3rem
-
-.cabezote
-  .card
-    background rgba(0, 0, 0, 0.4)
-    color white
-  .left
-    position absolute
-    left 0
-  .right
-    position absolute
-    right 0
-  .card-text
-    color white
-  .barra-soluciones
-    margin-top -9rem
-    font-family FontOdecopack
-    .botones-soluciones
-      .boton
-        margin 0 !important
-        padding 0 !important
-        text-align center !important
-        .contenido
-          height 100%
-          background-color white
-          color gray
-          border 1px solid $odecopack-color_5
-        .contenido:hover
-          border none
-          background-image url("../img/fondo_botones_hover.jpg")
-          background-repeat no-repeat
-          background-size auto
-          color white !important
-      a
-        color inherit
-        text-decoration inherit
-      .icono-svg
-        width 30%
-
-.jarallax
-  min-height 500px
 
 footer
   input[type=text],
@@ -261,6 +252,17 @@ hr
     padding-top 3.125rem
     padding-bottom 3.125rem
     height auto
+
+@media (max-width: 576px)
+  .cabezote
+    min-height 250px
+    h3
+      font-size 1rem
+
+@media (min-width: 577px)
+  .soluciones
+    .barra-soluciones
+      margin-top -9rem !important
 
 @media (max-width: 450px)
   .streak
