--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -1,4 +1,5 @@
-{% load static google_analytics %}
+{% load static solo_tags google_analytics %}
+{% get_solo 'web_configurations.GeneralConfiguration' as general_configuracion %}
 
 <!DOCTYPE html>
 <html lang="en" class="{% block html_class %}{% endblock %}">
@@ -15,7 +16,7 @@
     <!-- Material Design Bootstrap -->
     <link href="{% static 'web/sass/mdb.min.css' %}" rel="stylesheet">
     <!-- Your custom styles (optional) -->
-    <link href="{% static 'web/css/style.min.css' %}" rel="stylesheet">
+    <link href="{% static 'web/css/style.min.css' %}?version={{ general_configuracion.version_css_cache }}hola" rel="stylesheet">
 
     <link rel="icon" href="{% static 'web/img/favicon.ico' %}">
 
@@ -46,7 +47,9 @@
     {% endblock %}
 </main>
 {% include 'web/base/contactenos.html' %}
-{% include 'web/base/footer.html' %}
+{% block footer %}
+    {% include 'web/base/footer.html' %}
+{% endblock %}
 
 <!-- SCRIPTS -->
 <!-- JQuery -->
