Hover en link de color naranja odecopack Redes sociales abren en una nueva ventana

--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -63,6 +63,9 @@ body
   color black
   font-family FontOdecopack
 
+a:hover
+  color $odecopack-color_1
+
 .nav-item
   &.right-border
     border-right 1px solid $odecopack-color_1
