--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -100,6 +100,9 @@ body {
   color: #000;
   font-family: FontOdecopack;
 }
+a:hover {
+  color: #ed6b00;
+}
 .nav-item.right-border {
   border-right: 1px solid #ed6b00;
 }
