--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -342,3 +342,16 @@ hr
 .formulario
   .texto-legal
     font-size 0.7rem
+
+.clientes
+  .controls-top
+    .fa
+      background-color $odecopack-color_1
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon
+    background-color $odecopack-color_1
+  .carousel-indicators
+    li
+      background-color $odecopack-color_2
+    .active
+      background-color $odecopack-color_1
