--- a/templates/web/base/cabezote.html
+++ b/templates/web/base/cabezote.html
@@ -3,7 +3,7 @@
     <div class="full-bg-img">
         <div class="container flex-center">
             <div class="card right ml-5">
-                <div class="card-header color-1-odecopack lighten-1 white-text titulo-seccion">
+                <div class="card-header color-1-odecopack lighten-1 white-text">
                     <h3>{{ titulo|upper }}</h3>
                 </div>
                 {% if texto %}
