Mejora en el carrucel, nueva imagen empresa

--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -462,3 +462,9 @@ hr {
 .clientes .carousel-indicators .active {
   background-color: #ed6b00;
 }
+.carousel-control-next {
+  right: -4rem;
+}
+.carousel-control-prev {
+  left: -4rem;
+}
