--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -355,3 +355,9 @@ hr
       background-color $odecopack-color_2
     .active
       background-color $odecopack-color_1
+
+.carousel-control-
+  &next
+    right -4rem
+  &prev
+    left -4rem
