--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -18,7 +18,7 @@
                                         <div class="row justify-content-center">
                                     {% endif %}
 
-                                <div class="col-4 col-sm-3">
+                                <div class="col-4 col-sm-3 flex-center">
                                     <img src="{{ cliente.logo.url }}" class="img-fluid">
                                 </div>
 
