--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -13,40 +13,9 @@
                     </figure>
                 </div>
             {% endif %}
-            <div class="col-12 col-sm-6 botones-empresa">
-                <div>
-                    <div class="row">
-                        <div class="col-4 boton m-0">
-                            <div class="contenido">
-                                <img class="img-fluid" src="{% static 'web/img/empresa_boton_2.jpg' %}" alt="">
-                            </div>
-                        </div>
-                        <div class="col-4 boton m-0">
-                            <div class="contenido">
-                                <img class="img-fluid" src="{% static 'web/img/empresa_boton_2.jpg' %}" alt="">
-                            </div>
-                        </div>
-                        <div class="col-4 boton m-0">
-                            <div class="contenido">
-                                <img class="img-fluid" src="{% static 'web/img/empresa_boton_2.jpg' %}" alt="">
-                            </div>
-                        </div>
-                        <div class="col-4 boton m-0">
-                            <div class="contenido">
-                                <img class="img-fluid" src="{% static 'web/img/empresa_boton_2.jpg' %}" alt="">
-                            </div>
-                        </div>
-                        <div class="col-4 boton m-0">
-                            <div class="contenido">
-                                <img class="img-fluid" src="{% static 'web/img/empresa_boton_2.jpg' %}" alt="">
-                            </div>
-                        </div>
-                        <div class="col-4 boton m-0">
-                            <div class="contenido">
-                                <img class="img-fluid" src="{% static 'web/img/empresa_boton_2.jpg' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
+            <div class="col-12 col-sm-6 m-0 botones-empresa">
+                <div class="contenido">
+                    <img class="img-fluid" src="{% static 'web/img/datos-empresa.png' %}" alt="">
                 </div>
             </div>
         </div>
