--- a/static/web/sass/mdb.css
+++ b/static/web/sass/mdb.css
@@ -6575,9 +6575,9 @@ body.scrollable {
   width: 36px;
   height: 36px; }
 .carousel .carousel-control-prev-icon {
-  background-image: url(../img//svg/arrow_left.svg); }
+  background-image: url(../img/svg/arrow_left.svg); }
 .carousel .carousel-control-next-icon {
-  background-image: url(../img//svg/arrow_right.svg); }
+  background-image: url(../img/svg/arrow_right.svg); }
 .carousel .carousel-indicators li {
   max-width: 10px;
   height: 10px;
