--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -14,7 +14,7 @@
                 </div>
                 <script>
                     function initMap() {
-                        var uluru = {lat: 3.4640953, lng: -76.510982};
+                        var uluru = {lat: 3.4643184, lng: -76.5108136};
                         var map = new google.maps.Map(document.getElementById('map-container'), {
                             zoom: 15,
                             center: uluru
