Arreglo titulos soluciones items

--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -80,7 +80,8 @@
         <div class="modal-content">
             <!--Header-->
             <div class="modal-header color-1-odecopack">
-                <h5 class="modal-title w-100 h5-responsive" id="myModalLabel">{{ item.nombre|upper }}</h5>
+                <h2 class="modal-title w-100 h2-responsive" id="myModalLabel"><strong>{{ item.nombre|upper }}</strong>
+                </h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
